Removed Serif font and made everything headlines Museo Sans

--- a/src/index.scss
+++ b/src/index.scss
@@ -50,9 +50,9 @@ h2,
 h3,
 h4,
 h5 {
-	font-family: 'Orbikular Regular';
-	-webkit-box-direction: normal;
-	-webkit-font-smoothing: antialiased;
+	font-family: 'MuseoSans 300';
+	// -webkit-box-direction: normal;
+	// -webkit-font-smoothing: antialiased;
 }
 
 h1 {
