--- a/src/index.scss
+++ b/src/index.scss
@@ -27,6 +27,12 @@ div {
 }
 
 @font-face {
+	font-family: 'MuseoSans 100';
+	src: url('./fonts/MuseoSans_100.otf') format('opentype');
+	font-style: normal;
+	font-weight: 100;
+}
+@font-face {
 	font-family: 'MuseoSans 300';
 	src: url('./fonts/MuseoSans_300.otf') format('opentype');
 	font-style: normal;
@@ -50,7 +56,7 @@ h2,
 h3,
 h4,
 h5 {
-	font-family: 'MuseoSans 300';
+	font-family: 'MuseoSans 100';
 	// -webkit-box-direction: normal;
 	// -webkit-font-smoothing: antialiased;
 }
