--- a/src/index.scss
+++ b/src/index.scss
@@ -83,15 +83,15 @@ h4 {
 }
 
 h5 {
-	font-size: 16px;
+	font-size: 18px;
 	margin-bottom: 10px;
 }
 
 p,
 li {
 	font-family: 'MuseoSans 300';
-	font-size: 14px;
-	line-height: 22px;
+	font-size: 1rem;
+	line-height: 26px;
 }
 
 b {
