--- a/src/components/TrackRecord.module.scss
+++ b/src/components/TrackRecord.module.scss
@@ -13,6 +13,10 @@
 	ul {
 		list-style: none;
 
+		li {
+			font-size: 14px;
+		}
+
 		li::before {
 			content: '\25A0';
 			color: #05affa;
@@ -32,6 +36,7 @@
 		position: absolute;
 		line-height: 14px;
 		bottom: -14px;
+		font-size: 14px;
 	}
 
 	.closing {
@@ -58,8 +63,8 @@
 			justify-content: space-between;
 
 			.closingDescription {
-				font-size: 12px;
-				line-height: 20px;
+				font-size: 14px;
+				line-height: 22px;
 			}
 		}
 	}
