--- a/src/components/Tracker.module.scss
+++ b/src/components/Tracker.module.scss
@@ -32,12 +32,17 @@
 
 		p {
 			line-height: 14px;
+			font-size: 14px;
 			font-family: 'MuseoSans 700';
 		}
 	}
 
 	.text {
 		margin-left: 40px;
+		p {
+			font-size: 14px;
+			line-height: 22px;
+		}
 	}
 
 	.preLinkLine {
